--- a/local/program/templates/manage.mustache
+++ b/local/program/templates/manage.mustache
@@ -1,3 +1,14 @@
-<h1>List of Programs</h1>
+<h1>Programs</h1>
 
-<h2>{{ title_content_diy }}</h2>
+
+<div>
+    <input type="button" class="btn btn-primary" value="Create" onclick="location.href='{{edit_url}}'" />
+</div>
+
+<div>
+    {{#programs_list}}
+        <div class="list-inline-item">
+            <a href="{{edit_url}}?programid={{id}}">{{name}}</a>
+        </div>
+    {{/programs_list}}
+</div>
