[local/acccount] use OOP way to display all tenants in the manage.php again

--- a/local/acccount/templates/manage.mustache
+++ b/local/acccount/templates/manage.mustache
@@ -1,7 +1,7 @@
 <h1>List of Acccounts</h1>
 
 <div>
-    <input type="button" class="btn btn-primary" value="Create" onclick="location.href='{{edit_url}}'"
+    <input type="button" class="btn btn-primary" value="Create" onclick="location.href='{{edit_url}}'">
 </div>
 
 <div>
