--- a/local/acccount/templates/manage.mustache
+++ b/local/acccount/templates/manage.mustache
@@ -1,10 +1,10 @@
 <h1>List of Acccounts</h1>
 
-<div>
+<div class="form-group">
     <input type="button" class="btn btn-primary" value="Create" onclick="location.href='{{edit_url}}'">
 </div>
 
-<div>
+<div class="form-group">
     <table class="table table-hover table-bordered">
         <tr>
             <th>Acccount Name</th>
