--- a/local/acccount/templates/manage.mustache
+++ b/local/acccount/templates/manage.mustache
@@ -11,15 +11,47 @@
             <th>Site Name</th>
             <th>Id Number</th>
             <th>Default Acccount</th>
+            <th>Archived</th>
+            <th>Actions</th>
         </tr>
-    {{#acccount_list}}
+    {{#active_acccount_list}}
         <tr>
             <td>{{name}}</td>
             <td>{{sitename}}</td>
             <td>{{idnumber}}</td>
             <td>{{isdefault}}</td>
-            <td><a href="{{edit_url}}?acccountid={{id}}" id="edit_acccount_button">Edit</a> | <a href="#" id="delete_acccount_button">Delete</a></td>
+            <td>{{archived}}</td>
+            <td>
+                <a href="{{edit_url}}?acccountid={{id}}" id="edit_acccount_button">Edit</a>
+                |
+                <a href="#" id="archive_acccount_button">Archive</a>
+            </td>
         </tr>
-    {{/acccount_list}}
+    {{/active_acccount_list}}
+    </table>
+
+    <table class="table table-hover table-bordered">
+        <tr>
+            <th>Acccount Name</th>
+            <th>Site Name</th>
+            <th>Id Number</th>
+            <th>Default Acccount</th>
+            <th>Archived</th>
+            <th>Actions</th>
+        </tr>
+        {{#archived_acccount_list}}
+            <tr>
+                <td>{{name}}</td>
+                <td>{{sitename}}</td>
+                <td>{{idnumber}}</td>
+                <td>{{isdefault}}</td>
+                <td>{{archived}}</td>
+                <td>
+                    <a href="#" id="restore_acccount_button">Restore</a>
+                    |
+                    <a href="#" id="delete_acccount_button">Delete</a>
+                </td>
+            </tr>
+        {{/archived_acccount_list}}
     </table>
 </div>
