--- a/local/acccount/templates/manage.mustache
+++ b/local/acccount/templates/manage.mustache
@@ -49,7 +49,7 @@
                 <td>
                     <a href="{{action_url}}?acccountid={{id}}&action=restore" id="restore_acccount_button">Restore</a>
                     |
-                    <a href="#" id="delete_acccount_button">Delete</a>
+                    <a href="{{action_url}}?acccountid={{id}}&action=delete" id="delete_acccount_button">Delete</a>
                 </td>
             </tr>
         {{/archived_acccount_list}}
