--- a/local/program/templates/manage.mustache
+++ b/local/program/templates/manage.mustache
@@ -11,6 +11,7 @@
             <th>Program Name</th>
             <th>Id Number</th>
             <th>Description</th>
+            <th>Acccount ID</th>
             <th>Archived</th>
             <th>Actions</th>
         </tr>
@@ -19,6 +20,7 @@
                 <td>{{name}}</td>
                 <td>{{idnumber}}</td>
                 <td>{{description}}</td>
+                <td>{{acccountid}}</td>
                 <td>{{archived}}</td>
                 <td>
                     <a href="{{edit_url}}?programid={{id}}" id="edit_program_button">Edit</a>
@@ -34,6 +36,7 @@
             <th>Program Name</th>
             <th>Id Number</th>
             <th>Description</th>
+            <th>Acccount ID</th>
             <th>Archived</th>
             <th>Actions</th>
         </tr>
@@ -42,6 +45,7 @@
                 <td>{{name}}</td>
                 <td>{{idnumber}}</td>
                 <td>{{description}}</td>
+                <td>{{acccountid}}</td>
                 <td>{{archived}}</td>
                 <td>
                     <a href="{{action_url}}?programid={{id}}&action=restore" id="restore_program_button">Restore</a>
