[local/acccount] 1. finish learners list page

--- a/local/acccount/templates/learner.mustache
+++ b/local/acccount/templates/learner.mustache
@@ -9,14 +9,14 @@
         <tr>
             <th>Full Name</th>
             <th>Email</th>
-<!--            <th>Acccount ID</th>-->
+            <th>Acccount ID</th>
             <th>Actions</th>
         </tr>
     {{#acccount_learners_list}}
         <tr>
             <td>{{firstname}} {{lastname}}</td>
             <td>{{email}}</td>
-<!--            <td>{{acccountid}}</td>-->
+            <td>{{acccountid}}</td>
             <td>
                 <a href="#" id="edit_learner_button">Edit</a>
                 |
