[local/acccount] 1. bring assigning link into roles.php template

--- a/local/acccount/templates/role.mustache
+++ b/local/acccount/templates/role.mustache
@@ -9,7 +9,7 @@
         </tr>
     {{#acccount_roles_list}}
         <tr>
-            <td><a href="#">{{name}}</a></td>
+            <td><a href="{{assign_url}}&roleid={{roleid}}">{{name}}</a></td>
             <td>{{description}}</td>
             <td>{{count}}</td>
         </tr>
