--- a/blocks/custom_dashboard/scss/style.scss
+++ b/blocks/custom_dashboard/scss/style.scss
@@ -1,5 +1,6 @@
 @import "~antd/dist/antd.css";
 @import "progressbar";
+@import "campaigntable";
 
 $summary_title_text: #718296;
 $summary_num_text: #32325d;
