[block/custom_dashboard] 1. react continue, remove main , header tag from table component, ready to start header banner component

--- a/blocks/custom_dashboard/scss/_campaigntable.scss
+++ b/blocks/custom_dashboard/scss/_campaigntable.scss
@@ -1,6 +1,6 @@
 #campaign_table_header {
     height: 80px;
-    /* position: absolute; */
+    margin-top: -2rem; // remove the top margin and padding created by default block
 
     .table-title {
         line-height: 80px;
