[block/custom_dashboard] 1. react continue, welcome banner version 1 done

--- a/blocks/custom_dashboard/scss/_campaigntable.scss
+++ b/blocks/custom_dashboard/scss/_campaigntable.scss
@@ -91,4 +91,11 @@
             }
         }
     }
+
+    //.ant-table {
+    //    table {
+    //        width: auto;
+    //        display: inline-block;
+    //    }
+    //}
 }
