--- a/blocks/custom_dashboard/scss/style.scss
+++ b/blocks/custom_dashboard/scss/style.scss
@@ -1,8 +1,8 @@
 @import "~antd/dist/antd.css";
-@import "progressbar";
-@import "campaigntable";
-@import "welcomebanner";
-@import "boostnavigation";
+@import "partials/progressbar";
+@import "partials/campaigntable";
+@import "partials/welcomebanner";
+@import "partials/boostnavigation";
 
 $summary_title_text: #718296;
 $summary_num_text: #32325d;
