--- a/local/domains/css/styles.css
+++ b/local/domains/css/styles.css
@@ -1,5 +1,5 @@
 .table-container {
-  padding: 15px;
+  padding: 0;
   background: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.15);
   /* Light shadow */
@@ -7,6 +7,9 @@
 }
 .table-container.domain-table-container {
   margin-bottom: 30px;
+}
+.table-container .table-title-container {
+  padding: 15px;
 }
 .table-container .table-title-container .table-title {
   font-style: normal;
@@ -23,19 +26,22 @@
   color: rgba(0, 0, 0, 0.6);
   margin: 12px 0;
 }
-.table-container form.mform .form-group.row {
+.table-container .create-domain-form-container form.mform {
+  padding: 15px;
+}
+.table-container .create-domain-form-container form.mform .form-group.row {
   margin: 0;
   display: inline-block;
 }
-.table-container form.mform .form-group.row .col-form-label {
+.table-container .create-domain-form-container form.mform .form-group.row .col-form-label {
   display: none !important;
 }
-.table-container form.mform .form-group.row .form-inline {
+.table-container .create-domain-form-container form.mform .form-group.row .form-inline {
   padding: 0;
   max-width: 100%;
 }
-.table-container form.mform .form-group.row .form-inline input.form-control {
-  background: url("../img/earth-icon.png") no-repeat no-repeat center;
+.table-container .create-domain-form-container form.mform .form-group.row .form-inline input.form-control {
+  background: url("../img/earth-icon.png") no-repeat no-repeat left;
   background-position-x: 12px;
   padding-left: 35px;
   width: 345px;
@@ -48,7 +54,7 @@
   font-size: 16px;
   line-height: 24px;
 }
-.table-container form.mform .form-group.row .form-inline input.btn.btn-primary {
+.table-container .create-domain-form-container form.mform .form-group.row .form-inline input.btn.btn-primary {
   padding: 0 16px;
   height: 40px;
   /* Daybreak Blue / 6 */
@@ -59,6 +65,26 @@
   /* drop-shadow / button-primary */
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.043);
   border-radius: 0 2px 2px 0;
+}
+.table-container .domains-list-container {
+  margin-top: 18px;
+}
+.table-container .domains-list-container .table.domains-list .list-title {
+  background: #FAFAFA;
+  box-shadow: -18px 0px 0px -17px rgba(0, 0, 0, 0.06);
+  border-radius: 0;
+  border-top: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 22px;
+  color: rgba(0, 0, 0, 0.85);
+}
+.table-container .domains-list-container .table.domains-list .list-title.list-title-first {
+  box-shadow: 0 0 0px -17px rgba(0, 0, 0, 0.06);
+}
+.table-container .domains-list-container .table.domains-list td {
+  border-top: 1px solid rgba(0, 0, 0, 0.06);
 }
 
 /*# sourceMappingURL=styles.css.map */
