--- a/local/domains/templates/index.mustache
+++ b/local/domains/templates/index.mustache
@@ -12,26 +12,34 @@
         {{{mform}}}
     </div>
 
-    <table class="domains-list table table-hover table-bordered">
-        <tr>
-            <th>Name</th>
-            <th>Token</th>
-            <th>Status</th>
-            <th>Actions</th>
-        </tr>
-        {{#active_domains_list}}
+    <div class="domains-list-container">
+        <table class="domains-list table table-hover">
             <tr>
-                <td>{{name}}</td>
-                <td>{{token}}</td>
-                <td>{{status}}</td>
-                <td>
-                    <a href="{{action_url}}?domainid={{id}}&action=delete" id="delete_domain_button">Delete</a>
-                    |
-                    <a href="{{action_url}}?domainid={{id}}&action=verify" id="verify_domain_button">Verify</a>
-                </td>
+                <th class="list-title list-title-first">Name</th>
+                <th class="list-title">Token</th>
+                <th class="list-title">Status</th>
+                <th class="list-title">Provider</th>
+                <th class="list-title">Added Date</th>
+                <th class="list-title">Primary Domain</th>
+                <th class="list-title">Actions</th>
             </tr>
-        {{/active_domains_list}}
-    </table>
+            {{#active_domains_list}}
+                <tr>
+                    <td>{{name}}</td>
+                    <td>{{token}}</td>
+                    <td>{{status}}</td>
+                    <td>{{provider}}</td>
+                    <td>{{timecreated}}</td>
+                    <td></td>
+                    <td>
+                        <a href="{{action_url}}?domainid={{id}}&action=delete" id="delete_domain_button">Delete</a>
+                        |
+                        <a href="{{action_url}}?domainid={{id}}&action=verify" id="verify_domain_button">Verify</a>
+                    </td>
+                </tr>
+            {{/active_domains_list}}
+        </table>
+    </div>
 </div>
 
 <div class="container-fluid table-container sub-domain-table-container">
