--- a/local/domains/css/styles.css
+++ b/local/domains/css/styles.css
@@ -79,12 +79,20 @@
   font-size: 14px;
   line-height: 22px;
   color: rgba(0, 0, 0, 0.85);
+  padding-left: 15px;
 }
 .table-container .domains-list-container .table.domains-list .list-title.list-title-first {
   box-shadow: 0 0 0px -17px rgba(0, 0, 0, 0.06);
 }
 .table-container .domains-list-container .table.domains-list td {
   border-top: 1px solid rgba(0, 0, 0, 0.06);
+  padding-left: 15px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: #0D2138;
 }
 
 /*# sourceMappingURL=styles.css.map */
