--- a/local/domains/scss/styles.scss
+++ b/local/domains/scss/styles.scss
@@ -92,6 +92,7 @@
                 font-size: 14px;
                 line-height: 22px;
                 color: rgba(0, 0, 0, 0.85);
+                padding-left: 15px;
 
                 &.list-title-first {
                     box-shadow: 0 0 0px -17px rgba(0, 0, 0, 0.06);
@@ -100,6 +101,13 @@
 
             td {
                 border-top: 1px solid rgba(0, 0, 0, 0.06);
+                padding-left: 15px;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 22px;
+                letter-spacing: 0.02em;
+                color: #0D2138;
             }
         }
     }
