[ local/domains ] 1. delete domain and subdomain feature done

--- a/local/domains/css/styles.css
+++ b/local/domains/css/styles.css
@@ -116,5 +116,11 @@
   letter-spacing: 0.02em;
   color: #0D2138;
 }
+.table-container .domains-list-container .table.domains-list td .delete-item-link {
+  width: 20px;
+  height: 20px;
+  display: block;
+  background: url("../img/delete-icon.png") no-repeat no-repeat left;
+}
 
 /*# sourceMappingURL=styles.css.map */
