--- a/local/domains/templates/index.mustache
+++ b/local/domains/templates/index.mustache
@@ -24,7 +24,14 @@
             {{#active_subdomains_list}}
                 <tr>
                     <td>{{name}}</td>
-                    <td><span class="status-pill">{{status}}</span></td>
+                    <td>
+                        {{#status}}
+                            <span class="status-pill green-pill">Verified</span>
+                        {{/status}}
+                        {{^status}}
+                            <span class="status-pill red-pill">Not Verified</span>
+                        {{/status}}
+                    </td>
                     <td>{{timecreated}}</td>
                     <td></td>
                     <td>
@@ -65,7 +72,14 @@
                 <tr>
                     <td>{{name}}</td>
                     <td>{{token}}</td>
-                    <td>{{status}}</td>
+                    <td>
+                        {{#status}}
+                            <span class="status-pill green-pill">Connected</span>
+                        {{/status}}
+                        {{^status}}
+                            <span class="status-pill red-pill">Not connected</span>
+                        {{/status}}
+                    </td>
                     <td>{{provider}}</td>
                     <td>{{timecreated}}</td>
                     <td></td>
