--- a/local/domains/css/styles.css
+++ b/local/domains/css/styles.css
@@ -116,6 +116,27 @@
   letter-spacing: 0.02em;
   color: #0D2138;
 }
+.table-container .domains-list-container .table.domains-list td .status-pill {
+  padding: 4px;
+  position: static;
+  width: 57px;
+  height: 23px;
+  left: 10px;
+  top: 10px;
+  border-radius: 10px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+}
+.table-container .domains-list-container .table.domains-list td .status-pill.green-pill {
+  background: #52C41A;
+}
+.table-container .domains-list-container .table.domains-list td .status-pill.red-pill {
+  background: #FF7875;
+}
 .table-container .domains-list-container .table.domains-list td .delete-item-link {
   width: 20px;
   height: 20px;
