--- a/local/domains/templates/index.mustache
+++ b/local/domains/templates/index.mustache
@@ -1,55 +1,10 @@
-<div class="container-fluid table-container domain-table-container">
-    <div class="table-title-container">
-        <div class="table-title">
-            Fortinet-managed Domain
-        </div>
-        <div class="table-sub-title">
-            Enter the domain name you want to use for the learning platform.
-        </div>
-    </div>
-
-    <div class="create-domain-form-container">
-        {{{subdomainform}}}
-    </div>
-
-    <div class="domains-list-container">
-        <table class="domains-list sub-domains-list table table-hover">
-            <tr>
-                <th class="list-title list-title-first">Name</th>
-                <th class="list-title">Status</th>
-                <th class="list-title">Added Date</th>
-                <th class="list-title">Primary Domain</th>
-                <th class="list-title">Actions</th>
-            </tr>
-            {{#active_subdomains_list}}
-                <tr>
-                    <td>{{name}}</td>
-                    <td>
-                        {{#status}}
-                            <span class="status-pill green-pill">Verified</span>
-                        {{/status}}
-                        {{^status}}
-                            <span class="status-pill red-pill">Not Verified</span>
-                        {{/status}}
-                    </td>
-                    <td>{{timecreated}}</td>
-                    <td></td>
-                    <td>
-                        <a href="{{action_url}}?subdomainid={{id}}&action=delete" class="delete-item-link" id="delete_subdomain_button"></a>
-                    </td>
-                </tr>
-            {{/active_subdomains_list}}
-        </table>
-    </div>
-</div>
-
 <div class="container-fluid table-container sub-domain-table-container">
     <div class="table-title-container">
         <div class="table-title">
-            Connect a Third Party Domain
+            Connect Your Domain
         </div>
         <div class="table-sub-title">
-            Enter the domain name you want to connect for the learning platform.
+            Enter the domain name you want to connect.
         </div>
     </div>
 
@@ -60,7 +15,7 @@
     <div class="domains-list-container">
         <table class="domains-list table table-hover">
             <tr>
-                <th class="list-title list-title-first">Name</th>
+                <th class="list-title list-title-first">Domain</th>
                 <th class="list-title">Token</th>
                 <th class="list-title">Status</th>
                 <th class="list-title">Provider</th>
@@ -82,12 +37,71 @@
                     </td>
                     <td>{{provider}}</td>
                     <td>{{timecreated}}</td>
-                    <td></td>
+                    <td>
+                        {{#status}}
+                            <a href="{{action_url}}?domainid={{id}}&action=primary" class="primary-domain-link">
+                                <span class="primary-domain-radio {{#primarydomain}}primary-domain-selected{{/primarydomain}}"></span>
+                            </a>
+                        {{/status}}
+                    </td>
                     <td>
                         <a href="{{action_url}}?domainid={{id}}&action=delete" class="delete-item-link" id="delete_domain_button"></a>
                     </td>
                 </tr>
             {{/active_domains_list}}
+        </table>
+    </div>
+</div>
+
+<div class="container-fluid table-container domain-table-container">
+    <div class="table-title-container">
+        <div class="table-title">
+            Set Domain for Learning Platform
+        </div>
+        <div class="table-sub-title">
+            Enter the domain name you want to use for the learning platform.
+        </div>
+    </div>
+
+    <div class="create-domain-form-container">
+        {{{subdomainform}}}
+    </div>
+
+    <div class="domains-list-container">
+        <table class="domains-list sub-domains-list table table-hover">
+            <tr>
+                <th class="list-title list-title-first">Domain Name</th>
+                <th class="list-title">Status</th>
+                <th class="list-title">Added Date</th>
+                <th class="list-title">Primary Domain</th>
+                <th class="list-title">Actions</th>
+            </tr>
+            {{#active_subdomains_list}}
+                <tr>
+                    <td>{{name}}</td>
+                    <td>
+                        {{#status}}
+                            <span class="status-pill green-pill">Verified</span>
+                        {{/status}}
+                        {{^status}}
+                            <span class="status-pill red-pill">Not Verified</span>
+                        {{/status}}
+                    </td>
+                    <td>{{timecreated}}</td>
+                    <td>
+                        {{#status}}
+                            {{primarydomain}}
+                            <a href="{{action_url}}?subdomainid={{id}}&action=primary" class="primary-domain-link" >
+                            <span class="primary-domain-radio {{#primarydomain}}primary-domain-selected{{/primarydomain}}">
+                            </span>
+                            </a>
+                        {{/status}}
+                    </td>
+                    <td>
+                        <a href="{{action_url}}?subdomainid={{id}}&action=delete" class="delete-item-link" id="delete_subdomain_button"></a>
+                    </td>
+                </tr>
+            {{/active_subdomains_list}}
         </table>
     </div>
 </div>
