--- a/local/domains/templates/index.mustache
+++ b/local/domains/templates/index.mustache
@@ -12,6 +12,10 @@
         {{{domainform}}}
     </div>
 
+    <div class="add-token-notice-text">
+        Add the token generated below as a DNS TXT record in your domain DNS configuration to prove that you own the domain.
+    </div>
+
     <div class="domains-list-container">
         <table class="domains-list table table-hover">
             <tr>
