[ local/domains ] 1. validate domain name is exsited or not

--- a/local/domains/scss/styles.scss
+++ b/local/domains/scss/styles.scss
@@ -83,7 +83,7 @@
                 }
 
                 select#id_domainid {
-                    width: 103px;
+                    //width: 103px;
                     height: 40px;
                     left: 242px;
                     top: 0;
