--- a/local/domains/css/styles.css
+++ b/local/domains/css/styles.css
@@ -27,6 +27,7 @@
   margin: 12px 0;
 }
 .table-container .add-token-notice-text {
+  display: inline-block;
   background: #FFFFFF;
   border: 1px solid #F5222D;
   box-sizing: border-box;
@@ -34,7 +35,7 @@
   border-radius: 2px;
   background: url("../img/orange-exclamation-icon.png") no-repeat no-repeat left;
   background-position-x: 17px;
-  margin: 15px;
+  margin: 0 15px 15px 15px;
   padding: 10px 10px 10px 40px;
   font-style: normal;
   font-weight: normal;
@@ -158,9 +159,19 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
+  border: none;
+  vertical-align: inherit;
 }
 .table-container .domains-list-container .table.domains-list td .primary-domain-radio.primary-domain-selected {
   background: url("../img/primary-domain-selected.png") no-repeat no-repeat left;
+}
+.table-container .domains-list-container .table.domains-list td .primary-domain-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: #1890FF;
 }
 .table-container .domains-list-container .table.domains-list td .delete-item-link {
   width: 20px;
